<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#332F2F"
    tools:context=".BrzinaSvjetla">

    <EditText
        android:id="@+id/frekvencija"
        android:layout_width="216dp"
        android:layout_height="80dp"
        android:hint="@string/unesi_frekvenciju"
        android:inputType="numberDecimal"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.139"
        android:autofillHints="0"/>

    <EditText
        android:id="@+id/valnaDuljina"
        android:layout_width="219dp"
        android:layout_height="108dp"
        android:hint="@string/unesi_valnu_duljinu"
        android:inputType="numberDecimal"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frekvencija"
        app:layout_constraintVertical_bias="0.097"
        android:autofillHints="0"/>

    <TextView
        android:id="@+id/brzinaSvjetla"
        android:layout_width="232dp"
        android:layout_height="82dp"
        android:text="@string/brzina_svjetla"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valnaDuljina"
        app:layout_constraintVertical_bias="0.174" />

    <Button
        android:id="@+id/buttonBrzina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/izra_unaj"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <Button
        android:id="@+id/buttonNazad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nazad_u_izbornik"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBrzina"
        app:layout_constraintVertical_bias="0.616" />

</androidx.constraintlayout.widget.ConstraintLayout>