<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#332F2F"
    tools:context=".BrzinaSvjetla">


    <EditText
        android:id="@+id/naboj"
        android:layout_width="216dp"
        android:layout_height="80dp"
        android:hint="@string/unesi_naboj"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.139"
        android:inputType="numberDecimal"
        android:autofillHints="0"/>

    <EditText
        android:id="@+id/potencijalnaRazlika"
        android:layout_width="219dp"
        android:layout_height="108dp"
        android:hint="@string/unesi_potencijalnu_razliku"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/naboj"
        app:layout_constraintVertical_bias="0.097"
        android:inputType="numberDecimal"
        android:autofillHints="0"/>

    <TextView
        android:id="@id/elektrostatskaPotencijalnaEnergija"
        android:layout_width="232dp"
        android:layout_height="82dp"
        android:text="@string/elektrostatska_potencijalna_energija"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/potencijalnaRazlika"
        app:layout_constraintVertical_bias="0.174" />

    <Button
        android:id="@+id/buttonElektrostatska"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/izra_unaj"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <Button
        android:id="@+id/buttonNazad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonElektrostatska"
        app:layout_constraintVertical_bias="0.616"
        android:text="@string/nazad_u_izbornik"/>


</androidx.constraintlayout.widget.ConstraintLayout>